Bug 120576 - CRASH: Base crash without any notice with the option to migrate the embedded database from HDBSQL to FIREBIRD.
Summary: CRASH: Base crash without any notice with the option to migrate the embedded ...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Base (show other bugs)
Version:
(earliest affected)
6.1.0.0.alpha1+
Hardware: All All
: high critical
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.3.0 target:6.2.0.2 target:6.1.5
Keywords: bibisected, regression
Depends on:
Blocks: Database-Firebird-Migration
  Show dependency treegraph
 
Reported: 2018-10-13 23:29 UTC by m_a_riosv
Modified: 2018-12-23 23:43 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
console traces (6.36 KB, text/plain)
2018-10-14 12:39 UTC, Julien Nabet
Details
bt with debug symbols (18.93 KB, text/plain)
2018-10-14 13:06 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description m_a_riosv 2018-10-13 23:29:19 UTC
Description:
1. Mark experimental in Menu/Tools/Options/LibreOffice/Advanced
1. Open with 6.1 or master 6.2
Database sample in https://wiki.documentfoundation.org/images/a/af/Media_without_Macros.odb
2 Double click on a Form to open it
3. Answer 'Yes' to migrate to FIREBIRD.

LibreOffice silently crash without any notice, neither when launching the program again with master, with 6.1 ask for recover the document.

Version: 6.1.3.1 (x64)
Build ID: a9670562c26181ec3afbe381c9ff499ae88c98b7
CPU threads: 4; OS: Windows 10.0; UI render: GL; 
Locale: es-ES (es_ES); Calc: CL

Version: 6.2.0.0.alpha0+ (x64)
Build ID: 144da6d5079bcd435e6637cb5cf95305f3ec1306
CPU threads: 4; OS: Windows 10.0; UI render: default; VCL: win; 
TinderBox: Win-x86_64@42, Branch:master, Time: 2018-10-12_02:36:20
Locale: es-ES (es_ES); Calc: threaded



Steps to Reproduce:
.

Actual Results:
.

Expected Results:
.


Reproducible: Always


User Profile Reset: Yes



Additional Info:
.
Comment 1 Oliver Brinzing 2018-10-14 06:46:41 UTC
confirming crash with 

Version: 6.2.0.0.alpha0+ (x64)
Build ID: b9234b43ed259a10cf9077032af0f79740f01d8b
CPU threads: 4; OS: Windows 10.0; UI render: default; VCL: win; 
Locale: de-DE (de_DE); Calc: threaded

btw: 
step 1 "Mark experimental in Menu/Tools/Options/LibreOffice/Advanced"
is not necessary to reproduce the crash.
Comment 2 Julien Nabet 2018-10-14 12:39:46 UTC
Created attachment 145703 [details]
console traces

On pc Debian x86-64 with master sources updated today, I could reproduce this.

Hen double clicking the first form, I got a message dialog proposing to migrate towards Firebird now or later.
Then I had the crash with all these logs.
Comment 3 Julien Nabet 2018-10-14 12:42:03 UTC
Tamas: I know you're working on Mysql part for the moment but thought you might be interested in this one.
Comment 4 Julien Nabet 2018-10-14 13:06:53 UTC
Created attachment 145704 [details]
bt with debug symbols

I attached bt + gdb console.

I wonder if bt is ok since my linux kernel upgraded this morning.
I don't know if upgrading kernel requires to build from scratch because of change in libs dependencies.
Comment 5 Xisco Faulí 2018-10-14 15:12:23 UTC
LibreOffice started to crash after one of these 2 commits: https://cgit.freedesktop.org/libreoffice/core/log/?id=ea19b96b6beb0ce2f25705339d1d6342dc38b283&qt=range&q=07174b62c6ee23f7b44742ecfe44d4ff8653e57f..ea19b96b6beb0ce2f25705339d1d6342dc38b283

Before them an error message was prompted...
Comment 6 Caolán McNamara 2018-12-21 13:00:28 UTC
0xFFFF cast to short turned into -1 so wasn't seen as > 8000
Comment 7 Commit Notification 2018-12-21 14:30:33 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/5df6e8e399a1634c7e8dfe3558fc8fcdac3fcb09%5E%21

tdf#120576 avoid crash during database migration

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Caolán McNamara 2018-12-21 14:31:38 UTC
backports to 6-2 and 6-1 in gerrit
Comment 9 Commit Notification 2018-12-21 15:10:28 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-6-2":

https://git.libreoffice.org/core/+/a3c838986e58896a925f381c198d3bf592f874a7%5E%21

tdf#120576 avoid crash during database migration

It will be available in 6.2.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2018-12-23 17:11:01 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-6-1":

https://git.libreoffice.org/core/+/f2d8aa40c811d78b71302285711bc2eccdbcd9ea%5E%21

tdf#120576 avoid crash during database migration

It will be available in 6.1.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 m_a_riosv 2018-12-23 23:43:47 UTC
Verified, not crash with
Version: 6.2.0.1.0+ (x64)
Build ID: 7da0f71cf15af0cfa74d0eaa0011a6b1db1a4abd
CPU threads: 4; OS: Windows 10.0; UI render: GL; VCL: win; 
TinderBox: Win-x86_64@42, Branch:libreoffice-6-2, Time: 2018-12-23_10:20:49
Locale: es-ES (es_ES); UI-Language: en-US
Calc: threaded
Version: 6.3.0.0.alpha0+ (x64)
Build ID: 2c5c20b19c349a4b7f6d78d69d8d57f9af5c351c
CPU threads: 4; OS: Windows 10.0; UI render: GL; VCL: win; 
TinderBox: Win-x86_64@42, Branch:master, Time: 2018-12-23_00:18:09
Locale: es-ES (es_ES); UI-Language: en-US
Calc: threaded

Although the migration it's not successful.