tdf#120576 avoid crash during database migration

0xFFFF cast to short turned into -1 so wasn't seen as > 8000

Change-Id: I57592020c3c31751bec43f2619bf65d41ac47e87